Add catalog delete endpoints
